test/spec_vectors/simd_lane/fail/module_34.wat
(module (func (result i32) (i16x8.extract_lane_s 255 (v128.const i16x8 0 0 0 0 0 0 0 0))))